--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
 
     {{{ meta.inject().title.text() }}}
@@ -11,8 +11,7 @@
     <meta name="theme-color" content="hsl(2,77%,17%)">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/2.3.54/css/materialdesignicons.min.css"> 
-    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a33c4ef9d192f0013743163&product=inline-share-buttons"></script>
-  </head>
+\  </head>
   <body>
     <!--vue-ssr-outlet-->
   </body>
