--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="hsl(2,77%,17%)">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/2.3.54/css/materialdesignicons.min.css"> 
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   </head>
   <body>
     <!--vue-ssr-outlet-->
