--- a/src/index.template.html
+++ b/src/index.template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
 
     {{{ meta.inject().title.text() }}}
@@ -10,10 +10,11 @@
     <link rel="shortcut icon" sizes="64x64" href="/public/favicon.ico">
     <meta name="theme-color" content="hsl(2,77%,17%)">
     <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/2.3.54/css/materialdesignicons.min.css"> 
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link rel="stylesheet" href="//cdn.materialdesignicons.com/1.9.32/css/materialdesignicons.min.css"> 
+    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5a33c4ef9d192f0013743163&product=inline-share-buttons"></script>
   </head>
   <body>
     <!--vue-ssr-outlet-->
   </body>
+  <script type="text/javascript"> var infolinks_pid = 3107831; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </html>
