--- a/src/index.template.html
+++ b/src/index.template.html
@@ -16,5 +16,5 @@
   <body>
     <!--vue-ssr-outlet-->
   </body>
-  <script type="text/javascript"> var infolinks_pid = 3107831; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+  <!-- <script type="text/javascript"> var infolinks_pid = 3107831; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script> -->
 </html>
